Resolve feedback review: Added Purpose of each file and Contributor Details

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<!-- The index.html file serves as the main entry point HTML document for the GDG Frontend application. 
+ It sets up the basic HTML structure with essential meta tags, imports the GDG favicon, loads external fonts (PT Sans and Roboto) 
+ from Google Fonts, and establishes the viewport settings for responsive design. The file contains a root div element that serves 
+ as the mounting point for the React application and includes the main JavaScript entry point (main.jsx) as a module, creating the 
+ foundation for the single-page application architecture. -->
+
+ <!--Contributor: Arpit Makkar (23BCE7565)-->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src\assets\gdgtoplogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
