--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GDG Feedback Page</title>
+    <title>GDG VIT AP</title>
   </head>
   <body>
     <div id="root"></div>
